--- a/index.html
+++ b/index.html
@@ -60,28 +60,28 @@
             <h3>Portrait photography</h3>
                 </br>
             <p>Create stunning portraits that reflect your or your family's unique personality and style. Our skilled photographers specialize in creating stunning portraits that reflect your unique personality, style, and emotions. Whether you need professional headshots, family portraits, or personal branding photos, our team will work closely with you to ensure a comfortable and enjoyable experience. We pay attention to every detail, from lighting and composition to posing and expression, to create timeless portraits that you and your loved ones will cherish for years to come. Trust us to capture the beauty, character, and emotions that make you who you are with our exceptional portrait photography service.</p>
-            <a href="#" class="btn">View Pricing</a>
+            <a href="pricing.html" class="btn">View Pricing</a>
         </div>
         
         <div class="product non-selected-service">
             <h3>Nature photography</h3>
                 </br>
             <p>Our nature photography combines the beauty of the natural world with captivating portraits. Our skilled photographers specialize in capturing stunning portraits amidst breathtaking natural backdrops. Whether you desire a romantic engagement shoot amidst blooming flowers, a family portrait session in a serene forest, or a personal portrait against a majestic landscape, we blend the art of portraiture with the wonders of nature. With meticulous attention to detail and a keen eye for composition, we create timeless and intimate portraits that beautifully showcase both the individual and the surrounding natural elements. Experience the magic of being immersed in nature while having your unique story told.</p>
-            <a href="#" class="btn">View Pricing</a>
+            <a href="pricing.html" class="btn">View Pricing</a>
         </div>
 
         <div class="product non-selected-service">
             <h3>Product photography</h3>
                 </br>
                 <p>We bring your menu items and shopping items to life with visually captivating images that showcase their quality, features, and uniqueness. Our experienced photographers specialize in capturing the essence of your products, whether it's delectable food and beverages for your restaurant or enticing merchandise for your online store. With careful attention to lighting, composition, and styling, we create high-quality product images that engage and entice your customers. From mouthwatering dishes that make taste buds tingle to beautifully arranged products that highlight their details, our product photography service helps you present your offerings in the best possible way. Elevate your brand and entice customers with our exceptional services.</p>
-            <a href="#" class="btn">View Pricing</a>
+            <a href="pricing.html" class="btn">View Pricing</a>
         </div>
 
         <div class="product non-selected-service">
             <h3>Custom photography</h3>
                 </br>
                 <p>Want your own custom service? Let us capture the unforgettable moments of your most cherished milestones and celebrations. From gender reveals and proposals to baby showers and beyond, we provide personalized photography coverage for a wide range of custom events. We work closely with you to understand your vision and tailor our approach to ensure we capture every precious detail and heartfelt moment. With a blend of candid and posed shots, we aim to create a captivating visual story that reflects the joy, love, and excitement of your special occasion. Trust us to document your custom event with creativity, professionalism, and an unwavering commitment to preserving memories that will be cherished for a lifetime.</p>
-            <a href="#" class="btn">View Pricing</a>
+            <a href="pricing.html" class="btn">View Pricing</a>
         </div>
 
     </div>
