--- a/pricing.html
+++ b/pricing.html
@@ -221,7 +221,7 @@
           </div>
 
           <div class="article-item">
-            <div class="article-item-title"><h2>Couple</h2></div>
+            <div class="article-item-title"><h2>Doubles</h2></div>
             <h2>$49.99</h2>
             <h3>$99.99</h3>
             <p>Digital Photos Included!</p>
@@ -229,7 +229,7 @@
           </div>
 
           <div class="article-item">
-            <div class="article-item-title"><h2>Family</h2></div>
+            <div class="article-item-title"><h2>Groups</h2></div>
             <h2>$74.99</h2>
             <h3>$149.99</h3>
             <p>Digital Photos Included!</p>
@@ -246,11 +246,11 @@
           </div> -->
 
           <div class="article-chart-container">
-            <div class="article-portrait-description"><p><b>Solo Portraits:</b> Whether you're looking to update your professional headshot or simply want to celebrate yourself, our solo portraits showcase your unique personality. </p>
+            <div class="article-portrait-description"><p><b>Solo Portraits:</b> Whether you're looking to update your professional headshot or simply want to celebrate yourself, our solo portraits showcase your unique personality.</p>
             </div>
-            <div class="article-portrait-description"><p><b>Couples Portraits:</b> Whether you're commemorating an anniversary or simply capturing your love for each other, our couples portraits highlight the connection you share.</p>  
+            <div class="article-portrait-description"><p><b>Double Portraits:</b> Whether you're commemorating an anniversary or simply capturing a memory, our double portraits will best fit your needs.</p>  
             </div>
-            <div class="article-portrait-description"><p><b>Family Portraits:</b> Preserve your family's most cherished moments with our family portrait sessions. Gather your loved ones together to create lasting memories. </p>
+            <div class="article-portrait-description"><p><b>Group Portraits:</b> Whether it regards a professional groupshot or capturing your family's memory, our group portraits are highly recommended.</p>
             </div>
           </div>
 
@@ -258,11 +258,12 @@
 
           <div class="article-paragraph">
             <i>
-            <p>To ensure your convenience and peace of mind, we offer two flexible payment methods. Choose to pay 50% 
-              upfront and reserve your slot in advance, with the remaining 50% due after the photoshoot (contract required). 
-              Alternatively, you can opt to pay in full three days before the session, securing your appointment hassle-free. 
-              Contact us now to book your session and embark on a journey of unforgettable photography! </p></br>
+            <p>To ensure your convenience and peace of mind, we offer two flexible payment methods. Choose to pay in full before the session, securing your appointment hassle-free. 
+              Alternatively, you can opt to pay 50% upfront and reserve your slot in advance, with the remaining 50% due after the photoshoot. 
+              Contact us now to book your session and embark on a journey of unforgettable photography! </p>
+              <p><b>Disclaimer:</b> Bookings must be finalized three days prior to the session in order to secure your spot. A contract will be required prior to your booking in order for your session to take place.</p>
             </i>
+          </br>
               <p><b>Outdoor or Indoor Sessions Available!</b> For those seeking the comfort and convenience of an indoor session, we offer complementary traveling services within Brownsville, Los Fresnos, and Olmito. We will set up our equipment right inside your home, creating a personalized studio experience. Please ensure a minimum of 10 by 8 feet of available space for shooting, though we'll be sure to accommodate any restrictions that apply. To book an indoor session, simply send us an image of the space, and we'll handle the rest.</p>
             </br>
               <p> Alternatively, embrace the beauty of the great outdoors with our outdoor portrait sessions. We carefully select picturesque locations that complement your vision and style. If you have a specific outdoor location in mind, feel free to let us know, and we'll gladly accommodate your request.</p>
