Responsive display update + Performance

--- a/index.html
+++ b/index.html
@@ -9,12 +9,13 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato&family=Roboto+Condensed&family=Rubik&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!-- ***** -->
     </head>
 <body>
   <header>
-    <nav>
-      
+    <nav class="primary-header">
+      <div class="back-button"><i class="material-icons">arrow_back</i></div>
       <ul class="navigation">
         <li><a href="#about">About</a></li>
         <li><a href="#services">Services</a></li>
@@ -27,6 +28,12 @@
       </div>
 
     </nav>
+  </header>
+  <header class = "mobile-display">
+    <div class="logo">
+      <img src="Assets/Neamon-logo-2.png" alt="Logo" style="color:white;">
+    </div>
+    <div class="burger-menu"><i class="material-icons">menu</i></div>
   </header>
 
   <main>
@@ -43,7 +50,7 @@
       <h2>About</h2>
          <div class="about-image">
           <div class="about-image-container">
-            <img src="Assets/about-image.jpg" alt="About Image" style="color:white;">
+            <img src="Assets/about-image-2.jpeg" alt="About Image" style="color:white;">
           </div>
         </div>
         <p>C&V Digital is a small professional photography service based in Brownsville, Texas. With over 3 years of experience, we have been capturing precious moments and creating lasting memories for our clients. 
