--- a/pricing.html
+++ b/pricing.html
@@ -25,15 +25,16 @@
         <li><a href="index.html#contact">Contact</a></li>
       </ul>
 
-      <div class="logo">
+      <div class="logo" ><a href="index.html"></a>
         <img src="Assets/Neamon-logo-2.png" alt="Logo" style="color:white;">
       </div>
 
     </nav>
   </header>
   <header class = "mobile-display">
-    <div class="logo">
+    <div class="logo"><a href="index.html">
       <img src="Assets/Neamon-logo-2.png" alt="Logo" style="color:white;">
+    </a>
     </div>
     <div class="burger-menu"><i class="material-icons">menu</i></div>
   </header>
